@@ -234,3 +234,20 @@ Solo hecho ld b,(ix/iy+d)
 ->completar tipo ld (nn),a , ld (nn),reg  (MOD_WRITE_NN_MEM8 , MOD_WRITE_NN_MEM16)
 
 -assemble: ld hl,(68H) no interpreta el 68H como hexadecimal
+
+-Ítems de menú que solo aparezcan en modo avanzado
+
+-Icono de aplicación que se vea distinto si la aplicación está abierta 
+
+-Cálculo de tiempo usado en cada app en background 
+
+-Breakpoints de memorias absolutas - Gunther stube
+
+-Opción maximizar todas ventanas
+
+-Probar menú char height a 7 dibujando 7 líneas solo de alto 
+
+--nochangeslowparameters por defecto. Opción nueva --changeslowparameters y/o opcion compilacion en configure por defecto no slow.
+opcion de raspberry en compilacion no debe activar modo slow parameters, tienen que ser cosas distintas ahora
+
+-combinacion de tecla especial que haga un "reinicio" del menu, por si se ha colgado en algun sitio
